<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--region crf   -->
    <TextView
        android:id="@+id/head_crf"
        style="@style/SettingsAlertName"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_alert_height"
        android:text="@string/crf_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/settings_alert_side_width"
        android:layout_height="@dimen/settings_alert_height"
        android:gravity="end|center_vertical"
        android:text="@string/kachestvo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_crf" />

    <SeekBar
        android:id="@+id/seekBar_crf"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_alert_height"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/head_crf" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/settings_alert_side_width"
        android:layout_height="@dimen/settings_alert_height"
        android:gravity="start|center_vertical"
        android:text="@string/razmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_crf" />
    <!--endregion crf   -->

    <!--region preset   -->
    <TextView
        android:id="@+id/head_preset"
        style="@style/SettingsAlertName"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_alert_height"
        android:text="@string/preset_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_crf" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/settings_alert_side_width"
        android:layout_height="@dimen/settings_alert_height"
        android:gravity="end|center_vertical"
        android:text="@string/skorost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_preset" />

    <SeekBar
        android:id="@+id/seekBar_preset"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_alert_height"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/head_preset" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/settings_alert_side_width"
        android:layout_height="@dimen/settings_alert_height"
        android:gravity="start|center_vertical"
        android:text="@string/kachestvo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_preset" />
    <!--endregion preset   -->

    <!--region blur-->

    <CheckBox
        android:id="@+id/blurBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_alert_height"
        android:layout_margin="10dp"
        android:text="@string/blur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_preset" />

    <!--endregion-->

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blurBox" />

    <TextView
        android:id="@+id/run_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_alert_height"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/zapusk"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>